--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "RSAEntry",
+            "request": "launch",
+            "mainClass":"RSAEntry",
+            "args": "user.cer"
+        },
+        {
+            "type": "java",
             "name": "SigVer",
             "request": "launch",
             "mainClass": "SigVer",
